# babycenter-backend

./: .gitignore  Pipfile  README.md  pyproject.toml  responseHandler.yaml  server.py  start_server.sh
src/: runner.py
src/babycenter_backend/: allotax.py  handler.py  ngram.py  post.py  query.py  runner.py  server.py  topic.py  user.py
tests/: test_calculate_divergences.py  test_handler.py
